// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TapStack Unit Tests Stack Configuration and Synthesis TapStack should instantiate with custom props 1`] = `
"{
  "output": {
    "Ec2InstanceId": {
      "description": "ID of the EC2 instance",
      "value": "mock-instance-id"
    },
    "Ec2InstancePrivateIp": {
      "description": "Private IP address of the EC2 instance",
      "value": "mock-private-ip"
    },
    "KmsKeyArn": {
      "description": "ARN of the KMS key used for encryption",
      "value": "mock-kms-arn"
    },
    "KmsKeyId": {
      "description": "ID of the KMS key used for encryption",
      "value": "mock-kms-key-id"
    },
    "PrivateSubnetIds": {
      "description": "IDs of the private subnets",
      "value": [
        "mock-private-subnet-1",
        "mock-private-subnet-2"
      ]
    },
    "RdsEndpoint": {
      "description": "RDS instance endpoint",
      "value": "mock-rds-endpoint"
    },
    "RdsInstanceId": {
      "description": "ID of the RDS instance",
      "value": "mock-rds-id"
    },
    "RdsSecretArn": {
      "description": "ARN of the RDS credentials secret",
      "value": "mock-rds-secret-arn"
    },
    "S3BucketArn": {
      "description": "ARN of the secure S3 bucket",
      "value": "mock-s3-bucket-arn"
    },
    "S3BucketName": {
      "description": "Name of the secure S3 bucket",
      "value": "mock-s3-bucket"
    },
    "VpcId": {
      "description": "ID of the provisioned VPC",
      "value": "mock-vpc-id"
    }
  },
  "provider": {
    "aws": [
      {
        "default_tags": [
          {
            "tags": {
              "Project": "TAP"
            }
          }
        ],
        "region": "us-west-2"
      }
    ],
    "random": [
      {
      }
    ]
  },
  "terraform": {
    "backend": {
      "s3": {
        "bucket": "my-custom-state-bucket",
        "encrypt": true,
        "key": "prod/TestCustomStack.tfstate",
        "region": "us-east-1",
        "use_lockfile": true
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.4.0"
      },
      "random": {
        "source": "hashicorp/random",
        "version": "3.7.2"
      }
    }
  }
}"
`;

exports[`TapStack Unit Tests Stack Configuration and Synthesis TapStack should use default values when no props are provided 1`] = `
"{
  "output": {
    "Ec2InstanceId": {
      "description": "ID of the EC2 instance",
      "value": "mock-instance-id"
    },
    "Ec2InstancePrivateIp": {
      "description": "Private IP address of the EC2 instance",
      "value": "mock-private-ip"
    },
    "KmsKeyArn": {
      "description": "ARN of the KMS key used for encryption",
      "value": "mock-kms-arn"
    },
    "KmsKeyId": {
      "description": "ID of the KMS key used for encryption",
      "value": "mock-kms-key-id"
    },
    "PrivateSubnetIds": {
      "description": "IDs of the private subnets",
      "value": [
        "mock-private-subnet-1",
        "mock-private-subnet-2"
      ]
    },
    "RdsEndpoint": {
      "description": "RDS instance endpoint",
      "value": "mock-rds-endpoint"
    },
    "RdsInstanceId": {
      "description": "ID of the RDS instance",
      "value": "mock-rds-id"
    },
    "RdsSecretArn": {
      "description": "ARN of the RDS credentials secret",
      "value": "mock-rds-secret-arn"
    },
    "S3BucketArn": {
      "description": "ARN of the secure S3 bucket",
      "value": "mock-s3-bucket-arn"
    },
    "S3BucketName": {
      "description": "Name of the secure S3 bucket",
      "value": "mock-s3-bucket"
    },
    "VpcId": {
      "description": "ID of the provisioned VPC",
      "value": "mock-vpc-id"
    }
  },
  "provider": {
    "aws": [
      {
        "default_tags": [
        ],
        "region": "us-west-2"
      }
    ],
    "random": [
      {
      }
    ]
  },
  "terraform": {
    "backend": {
      "s3": {
        "bucket": "iac-rlhf-tf-states",
        "encrypt": true,
        "key": "dev/TestDefaultStack.tfstate",
        "region": "us-east-1",
        "use_lockfile": true
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.4.0"
      },
      "random": {
        "source": "hashicorp/random",
        "version": "3.7.2"
      }
    }
  }
}"
`;
